--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,14 @@ cabal.sandbox.config
 .DS_Store
 *.swp
 *.keter
-*~
-\#*
-cmdvme.cabal
+node_modules
+static/build
+static/bower_components/
+static/node_modules/
+static/output/
+static/.pulp-cache/
+static/.psc*
+static/.purs*
+static/.psa*
+
+npm-debug.log
